// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Storyshots coreModules/bootstrap/DefaultLoader Loading 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div>
        <div
          className="ui segment"
        >
          Some not loaded content 
        </div>
        <div
          className="dina background"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "opacity": 0.7,
              "pointerEvents": "none",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transition": "opacity 0.5s",
              "width": "100%",
              "zIndex": 1000,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/bootstrap/DefaultLoader Not loading 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div>
        <div
          className="ui segment"
        >
          Some loaded content 
        </div>
        <div
          className="dina background"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transition": "opacity 0.5s",
              "width": "100%",
              "zIndex": 1000,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/bootstrap/DefaultWrapper Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div>
        <div
          className="ui segment"
        >
          Wrapped content (DefaultWrapper does nothing but render children)
        </div>
        <p>
          After DefaultWrapper
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/commonUi/Footer Default 1`] = `
<div>
  <div
    className="ui inverted vertical segment"
    id="footer"
    style={
      Object {
        "padding": "5em",
      }
    }
  >
    <div
      className="ui container"
    >
      <div
        className="ui inverted stackable divided grid"
      >
        <div
          className="row"
        >
          <div
            className="three wide column"
          >
            <h4
              className="ui inverted header"
            >
              Site
            </h4>
            <div
              className="ui large inverted link list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="home icon"
                  />
                  <a
                    aria-current="true"
                    className="active"
                    href="/"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Start
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="user icon"
                  />
                  <a
                    aria-current={false}
                    className={undefined}
                    href="/login"
                    onClick={[Function]}
                    style={undefined}
                  >
                    Login
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="database icon"
                  />
                  <a
                    aria-current={false}
                    className={undefined}
                    href="/docs"
                    onClick={[Function]}
                    style={undefined}
                  >
                    Data model
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            className="three wide column"
          >
            <h4
              className="ui inverted header"
            >
              Documentation
            </h4>
            <div
              className="ui large inverted link list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="wikipedia icon"
                  />
                  <a
                    href="https://www.dina-project.net/wiki/Welcome_to_the_DINA_project!"
                  >
                    DINA wiki
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="database icon"
                  />
                  <a
                    aria-current={false}
                    className={undefined}
                    href="/docs"
                    onClick={[Function]}
                    style={undefined}
                  >
                    Data model
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            className="three wide column"
          >
            <h4
              className="ui inverted header"
            >
              Developer
            </h4>
            <div
              className="ui large inverted link list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="github icon"
                  />
                  <a
                    href="https://github.com/DINA-Web"
                  >
                    DINA-Web Github
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <a
                    href="https://github.com/DINA-Web/dina-collections"
                  >
                    <i
                      aria-hidden="true"
                      className="github icon"
                    />
                    Collections on Github
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="external icon"
                  />
                  <a
                    href="https://alpha-style.dina-web.net/"
                  >
                    Style guide
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="external icon"
                  />
                  <a
                    href="https://alpha-api.dina-web.net/docs"
                  >
                    Api documentation
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="external icon"
                  />
                  <a
                    href="/storybook/index.html"
                  >
                    Component documentation
                  </a>
                </div>
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                <div
                  className="content"
                >
                  <i
                    aria-hidden="true"
                    className="external icon"
                  />
                  <a
                    href="/coverage/index.html"
                  >
                    Test coverage
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/commonUi/NavigationSidebar Default 1`] = `
<div>
  <div
    className="ui large inverted vertical labeled icon ui overlay left visible sidebar flex menu"
    style={
      Object {
        "overflow": "hidden",
        "width": 100,
      }
    }
  >
    <a
      aria-current={false}
      className="item"
      href="/app"
      onClick={[Function]}
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      <i
        aria-hidden="true"
        className="home large icon"
      />
      <span>
        Modules.commonUi.routes.home
      </span>
    </a>
    <a
      aria-current={false}
      className="item"
      href="/app/mammals/register"
      onClick={[Function]}
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      <i
        aria-hidden="true"
        className="plus large icon"
      />
      <span>
        Register mammal
      </span>
    </a>
    <a
      aria-current={false}
      className="item"
      href="/app/mammals/lookup"
      onClick={[Function]}
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      <i
        aria-hidden="true"
        className="search large icon"
      />
      <span>
        Lookup mammals
      </span>
    </a>
    <a
      aria-current={false}
      className="item push bottom"
      href="/app/settings"
      onClick={[Function]}
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      <i
        aria-hidden="true"
        className="setting large icon"
      />
      <span>
        Settings
      </span>
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="sign out icon"
      />
      <span>
        Logout
      </span>
    </a>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/commonUi/PageTemplate Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="ui container"
        style={
          Object {
            "minHeight": undefined,
            "paddingBottom": 30,
            "paddingTop": 30,
          }
        }
      >
        <div>
          Page content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/commonUi/TranslatedLabel Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="ui green label"
        onClick={[Function]}
      >
        <span>
          key-without-translations
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/error/FormFieldError Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        style={
          Object {
            "backgroundColor": "#e5e2e2",
            "minHeight": 50,
          }
        }
      >
        <span
          className="ui red tiny label"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "textAlign": "left",
              "transform": "translateY(100%)",
              "zIndex": 20,
            }
          }
        >
          <span>
            Modules.error.some-scope.SAMPLE_ERROR_CODE, modules.error.SAMPLE_ERROR_CODE
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/error/FormSchemaError Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="ui negative message"
      >
        <div
          className="ui red tiny labels"
        >
          <div
            className="ui label"
            onClick={[Function]}
          >
            <span>
              Modules.error.some-scope.SAMPLE_ERROR_CODE, modules.error.SAMPLE_ERROR_CODE
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/form/Fields/Checkbox Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="field"
        style={
          Object {
            "float": undefined,
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <label
          htmlFor="test"
          style={Object {}}
        >
          <span>
            Modules.no-module.fieldLabels.test
          </span>
           
          <i
            aria-hidden="true"
            className="blue help circle outline link icon"
            onClick={[Function]}
          />
        </label>
        <div
          className="ui fitted checkbox"
          onChange={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <input
            checked={false}
            className="hidden"
            id={undefined}
            name="test"
            onClick={[Function]}
            readOnly={true}
            tabIndex={0}
            type="checkbox"
            value={undefined}
          />
          <label
            htmlFor={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/I18nProvider Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div>
        <div>
          Child node
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/LanguageSelect Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui button floating labeled dropdown icon"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          en
        </div>
        <i
          aria-hidden="true"
          className="world icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              en
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              sv
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/LanguageSelect Green color 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui button floating labeled dropdown icon green"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          en
        </div>
        <i
          aria-hidden="true"
          className="world icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              en
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              sv
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Markdown Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="markdown-body"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Detta är kompilerad markdown</p>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Markdown Fallback language 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="markdown-body"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>This is compiled markdown in fallback language en</p>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/MarkdownToHtmlAsync Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/ModuleTranslate Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        förnamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/ModuleTranslate Multiple modules 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        förnamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/ModuleTranslate Not existing 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        modules.notExisting.firstName
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate Capitalize 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        Efternamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        förnamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate Fallback 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        This is fallback
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate Interpolation 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        Hej Anton
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate Multiple keys 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        Efternamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/Translate No translation available 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        non-existing
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/createModuleTranslate Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        förnamn
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/i18n/createModuleTranslate Not existing 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <span>
        modules.notExisting.firstName
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/keyboardShortcuts/ShortcutsDisplay Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    />
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ColumnLayout One full-width column 1`] = `
<div>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ColumnLayout Three columns, two fixed width and one scrollable filling the rest 1`] = `
<div>
  <div
    style={
      Object {
        "height": "50px",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ColumnLayout Two columns with fixed widths 1`] = `
<div>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ColumnLayout Two columns with relative widths 1`] = `
<div>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`storyshots Storyshots coreModules/layout/RowLayout One full-height column 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "height": "100%",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "gray",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        100%
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/RowLayout Three rows, two fixed height and one filling the rest 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "height": "100%",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "100px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "gray",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        100px
      </div>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": undefined,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        filling up rest of height
      </div>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "30%",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "green",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        30%
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/RowLayout Three rows, two fixed height and one scrollable filling the rest (width of container 100px) 1`] = `
<div>
  <div
    style={
      Object {
        "height": "100%",
        "overflow": "hidden",
        "width": "100px",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "float": "left",
            "height": "100px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "background": "gray",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          100px
        </div>
      </div>
      <div
        className={undefined}
        style={
          Object {
            "float": "left",
            "height": undefined,
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "background": "red",
              "height": "100%",
              "overflow": "scroll",
              "width": "100%",
            }
          }
        >
          filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable filling up rest of width with enough text to be scrollable
        </div>
      </div>
      <div
        className={undefined}
        style={
          Object {
            "float": "left",
            "height": "30%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "background": "green",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          30%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/RowLayout Two rows with fixed heights 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "height": "100%",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "300px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "gray",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        300px
      </div>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "150px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "green",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        150px
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/RowLayout Two rows with relative heights 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "height": "100%",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "30%",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "gray",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        30%
      </div>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "float": "left",
          "height": "70%",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "background": "green",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        70%
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ViewWrap Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        style={
          Object {
            "height": "100vh",
            "left": 0,
            "minWidth": "100%",
            "overflow": "hidden",
            "paddingLeft": 0,
            "position": "relative",
            "top": 0,
            "transition": "transform 0.2s",
            "zIndex": 1,
          }
        }
      >
        <div
          className="dimmable"
        >
          <div
            className="ui dimmer"
            onClick={[Function]}
          />
          <div
            className="ui fluid dina background"
            style={
              Object {
                "height": "768px",
                "overflow": "auto",
              }
            }
          >
            <div>
              View wrap content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/layout/ViewWrap With TopMenu 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        style={
          Object {
            "height": "100vh",
            "left": 0,
            "minWidth": "100%",
            "overflow": "hidden",
            "paddingLeft": 0,
            "position": "relative",
            "top": 0,
            "transition": "transform 0.2s",
            "zIndex": 1,
          }
        }
      >
        <div
          className="dimmable"
        >
          <div
            className="ui inverted menu"
            style={
              Object {
                "borderRadius": 0,
                "margin": 0,
              }
            }
          >
            <div
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="sidebar large icon"
              />
            </div>
          </div>
          <div
            className="ui dimmer"
            onClick={[Function]}
          />
          <div
            className="ui fluid dina background"
            style={
              Object {
                "height": "728px",
                "overflow": "auto",
              }
            }
          >
            <div>
              View wrap content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/Flash Default 1`] = `
<div>
  <div
    className="ui info message flash"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="close icon"
      onClick={[Function]}
    />
    <div
      className="content"
    >
      <div
        className="header"
      >
        headerKey
      </div>
      <p>
        descriptionKey
      </p>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/Flash Error 1`] = `
<div>
  <div
    className="ui error message flash"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="close icon"
      onClick={[Function]}
    />
    <div
      className="content"
    >
      <div
        className="header"
      >
        headerKey
      </div>
      <p>
        descriptionKey
      </p>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/Flash Info 1`] = `
<div>
  <div
    className="ui info message flash"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="close icon"
      onClick={[Function]}
    />
    <div
      className="content"
    >
      <div
        className="header"
      >
        headerKey
      </div>
      <p>
        descriptionKey
      </p>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/Flash Success 1`] = `
<div>
  <div
    className="ui success message flash"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="close icon"
      onClick={[Function]}
    />
    <div
      className="content"
    >
      <div
        className="header"
      >
        headerKey
      </div>
      <p>
        descriptionKey
      </p>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/Flash Warning 1`] = `
<div>
  <div
    className="ui warning message flash"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="close icon"
      onClick={[Function]}
    />
    <div
      className="content"
    >
      <div
        className="header"
      >
        headerKey
      </div>
      <p>
        descriptionKey
      </p>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/FormFieldHelpIcon Default 1`] = `
<div>
  <i
    aria-hidden="true"
    className="blue help circle outline link icon"
    onClick={[Function]}
  />
</div>
`;

exports[`storyshots Storyshots coreModules/notifications/NotificationDisplay Default 1`] = `<div />`;

exports[`storyshots Storyshots coreModules/notifications/NotificationModal Default 1`] = `<div />`;

exports[`storyshots Storyshots coreModules/search/MultipleSearchTagsSelect Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <div
        className="field"
        style={
          Object {
            "float": undefined,
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <label
          htmlFor="MultipleSearchTagsSelect"
          style={Object {}}
        >
          <span>
            
          </span>
        </label>
        <div
          className="ui buttons"
        >
          <div
            aria-busy={false}
            aria-disabled={undefined}
            aria-expanded={false}
            autoComplete={undefined}
            className="ui button multiple search selection dropdown"
            name="MultipleSearchTagsSelect"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="combobox"
            style={
              Object {
                "background": "white",
                "borderRadius": 0,
                "fontWeight": "normal",
              }
            }
            tabIndex={undefined}
          >
            <input
              aria-autocomplete="list"
              autoComplete="off"
              className="search"
              onChange={[Function]}
              style={
                Object {
                  "width": undefined,
                }
              }
              tabIndex={0}
              type="text"
              value=""
            />
            <span
              className="sizer"
            />
            <div
              aria-live="polite"
              className="text"
              role="alert"
            >
              
            </div>
            <i
              aria-hidden="true"
              className="search icon"
              onClick={[Function]}
            />
            <div
              aria-multiselectable={true}
              className="menu transition"
              role="listbox"
            >
              <div
                className="message"
              >
                Type query and press Enter
              </div>
            </div>
          </div>
          <input
            className="hidden"
            name="MultipleSearchTagsSelect.hidden"
            onBlur={[Function]}
            onChange={[Function]}
            type="hidden"
            value={Array []}
          />
          <button
            className="ui disabled button"
            disabled={true}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            0/0
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots coreModules/user/LoginForm Default 1`] = `
<div>
  <div
    className="ui container"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="ui green segment"
    >
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <div
          className="ui large stacked segment"
        >
          <div
            className="field"
            style={
              Object {
                "float": undefined,
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <div
              className="ui left icon input"
              style={undefined}
            >
              <input
                autoComplete="off"
                disabled={false}
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                onFocus={[Function]}
                placeholder="Username"
                tabIndex={undefined}
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                className="user icon"
              />
            </div>
          </div>
          <div
            className="field"
            style={
              Object {
                "float": undefined,
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <div
              className="ui left icon input"
              style={undefined}
            >
              <input
                autoComplete="off"
                disabled={false}
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                onFocus={[Function]}
                placeholder="Password"
                tabIndex={undefined}
                type="password"
                value=""
              />
              <i
                aria-hidden="true"
                className="lock icon"
              />
            </div>
          </div>
          <button
            className="ui green large fluid disabled button"
            disabled={true}
            name="btn-login"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="submit"
          >
            <span>
              Log in
            </span>
          </button>
          
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar addingNewRecordComplete 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={50001}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50001}
        aria-valuemin={1}
        aria-valuenow={50001}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50001
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar changeRecordNumber 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={30000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={30000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar default 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={30000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={30000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar firstRecord 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={1}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={1}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar lastRecord 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={50000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={50000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar nextRecord 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={30001}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={30001}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar openFilter 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={30000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={30000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar openNewRecordForm 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={50000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={50000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
      <br />
      <i>
        *Adding new*
      </i>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon disabled button"
        disabled={true}
        onClick={[Function]}
        role="button"
        tabIndex={-1}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon disabled button"
        disabled={true}
        onClick={[Function]}
        role="button"
        tabIndex={-1}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon disabled button"
        disabled={true}
        onClick={[Function]}
        role="button"
        tabIndex={-1}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar previousRecord 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={29999}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={29999}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/RecordNavigationBar showAllRecords 1`] = `
<div>
  <div
    className="ui padded center aligned middle aligned grid"
  >
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      <div
        className="ui buttons"
      >
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron left icon"
          />
        </button>
        <button
          className="ui icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="chevron right icon"
          />
        </button>
      </div>
    </div>
    <div
      className="three wide computer eight wide mobile eight wide tablet column"
    >
      <div
        className="ui mini disabled input"
        style={
          Object {
            "width": "80px",
          }
        }
      >
        <input
          disabled={true}
          onChange={[Function]}
          tabIndex={-1}
          type="number"
          value={30000}
        />
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax={50000}
        aria-valuemin={1}
        aria-valuenow={30000}
        className="rangeslider rangeslider-horizontal"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="rangeslider__fill"
          style={
            Object {
              "width": "0px",
            }
          }
        />
        <div
          className="rangeslider__handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
          tabIndex={0}
        >
          <div
            className="rangeslider__handle-label"
          >
            
          </div>
        </div>
        <ul
          className="rangeslider__labels"
        />
      </div>
    </div>
    <div
      className="two wide computer four wide mobile four wide tablet column"
    >
      50000
      <br />
      Total records
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="book icon"
        />
        Show All
      </button>
    </div>
    <div
      className="computer only one wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="plus icon"
        />
        New record
      </button>
    </div>
    <div
      className="computer only five wide computer column"
    />
    <div
      className="computer only two wide computer column"
    >
      <button
        className="ui icon button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="search icon"
        />
        Find
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/ResultOptionsBar default 1`] = `
<div>
  <div
    className="ui top attached tabular menu"
  >
    <a
      className="active disabled item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="wordpress forms large icon"
      />
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="table large icon"
      />
    </a>
    <div
      className="right menu"
    >
      <div
        className="ui center aligned middle aligned grid"
      >
        <div
          className="column"
        >
          <i
            aria-hidden="true"
            className="share large icon"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="setting large icon"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/ResultOptionsBar formView 1`] = `
<div>
  <div
    className="ui top attached tabular menu"
  >
    <a
      className="active disabled item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="wordpress forms large icon"
      />
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="table large icon"
      />
    </a>
    <div
      className="right menu"
    >
      <div
        className="ui center aligned middle aligned grid"
      >
        <div
          className="column"
        >
          <i
            aria-hidden="true"
            className="share large icon"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="setting large icon"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots domainModules/collectionMammals/MammalManager/ResultOptionsBar tableView 1`] = `
<div>
  <div
    className="ui top attached tabular menu"
  >
    <a
      className="item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="wordpress forms large icon"
      />
    </a>
    <a
      className="active disabled item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="table large icon"
      />
    </a>
    <div
      className="right menu"
    >
      <div
        className="ui center aligned middle aligned grid"
      >
        <div
          className="column"
        >
          <i
            aria-hidden="true"
            className="share large icon"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="setting large icon"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;
